k8s/deployment-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
spec:
  replicas: 2
  selector:
    matchLabels: { app: orders }
  template:
    metadata:
      labels: { app: orders }
    spec:
      containers:
      - name: orders
        image: 075992502789.dkr.ecr.ap-south-1.amazonaws.com/orders-service:latest
        ports: [{ containerPort: 5000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector: { app: orders }
  ports: [{ port: 80, targetPort: 5000 }]
  type: ClusterIP
