k8s/products-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  replicas: 2
  selector:
    matchLabels: { app: products }
  template:
    metadata:
      labels: { app: products }
    spec:
      containers:
      - name: products
        image: 075992502789.dkr.ecr.ap-south-1.amazonaws.com/orders-service:latest
        ports: [{ containerPort: 5500 }]
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector: { app: products }
  ports: [{ port: 80, targetPort: 5500 }]
  type: ClusterIP
